spacing fixed

--- a/assets/base.css
+++ b/assets/base.css
@@ -140,9 +140,6 @@ body:has(.section-header .drawer-menu) .announcement-bar-section .page-width {
 }
 
 @media screen and (min-width: 990px) {
-  .page-width {
-    padding: 0 ;
-  }
   .header:not(.drawer-menu).page-width {
     padding-left: 5rem;
     padding-right: 5rem;
@@ -159,6 +156,11 @@ body:has(.section-header .drawer-menu) .announcement-bar-section .page-width {
   }
 }
 
+@media screen and (min-width:1199px) {
+  .page-width {
+    padding: 0 ;
+  }
+}
 .isolate {
   position: relative;
   z-index: 0;
